
5.2b1 -> 5.3a1
    - jbj: replace freeSpec/freePackage with defines, eliminate symbols in ABI.
    - rse: upgrade build environment to GNU automake 1.11 and GNU m4 1.4.13
    - jbj: performance tweaks.
    - jbj: change default dep whiteout to ensure filessystem before setup.
    - jbj: prepare to save install scriptlet states/metrics.
    - jbj: build: add build scriptlet status/duration to SRPM headers.
    - jbj: build: use rpmsqExecve to run build scriptlets.
    - jbj: build: tear down _pkgPool/_specPool before exiting.
    - jbj: rpmsw: add an output FILE * argument.
    - jbj: build: put a stopwatch on build scriptlets.
    - jbj: rpmio: wrap posix_fallocate(3) / fallocate(2) (for rpmdb creation).
    - jbj: eliminate useless rebuilddb legacy "sanity check" hysteria.
    - jbj: display rebuilddb progress using ps(1) and top(1).
    - jbj: mark rebuilddb legacy hysteria for destruction.
    - jbj: add RPMTAG_SHA1HEADER to rpmdb pubkeys.
    - jbj: remove first (of 3) rpm-5.2.0 release process be-bugging flaws.
    - jbj: fix: resuscitate --nodigest/--nosignature w --rebuilddb.
    - jbj: pick-up some orphan check-ins.
    - jbj: header: remove (unused) headerUsageCount.
    - jbj: header: fix: re-initialize headers from pool more carefully.
    - jbj: rpmps: fix: remove the hack-o-round, handle rpmps like other pools.
    - jbj: yarn: convert dbiIndex to usage mutex with refcounts.
    - jbj: yarn: convert Package to usage mutex with refcounts.
    - jbj: yarn: convert Spec to usage mutex with refcounts.
    - jbj: yarn: convert DIGEST_CTX to usage mutex with refcounts.
    - jbj: eliminate (unused) DB_DBT_MALLOC flag while loading rpmdb headers.
    - jbj: bump sonames to libfoo-5.2.
    - jbj: rpmmi: rename the other methods for the match iterator object.
    - proyvind: make it possible to set macro files to load predefines from by
	defining PREMACROFILES at build time.
    - jbj: rpmmi: rename the typedef and rpmmi{Init,Next,Free} methods.