@@ -1,5 +1,7 @@
 
 5.2b1 -> 5.3a1
+    - jbj: save %pre/%post scriptlet's exit code and duration.
+    - jbj: add header to rpmdb after, not before, %post is run.
     - jbj: replace freeSpec/freePackage with defines, eliminate symbols in ABI.
     - rse: upgrade build environment to GNU automake 1.11 and GNU m4 1.4.13
     - jbj: performance tweaks.
